Huge update for both backend and frontend. Improve API services and UI/UX features. The last version using localtunnel to expose backend